--- a/style.css
+++ b/style.css
@@ -45,16 +45,16 @@ body {
 }
 
 ul {
-	margin:0;
+	margin: 0px;
 	padding: 0px;
 }
 
 li, h3 {
-	list-style:none;
+	list-style: none;
 }
 
 input,button{
-	outline:none;
+	outline: none;
 }
 
 button {
@@ -125,7 +125,7 @@ li > * {
 }
 
 li > input[type="checkbox"] {
-	margin: 0 10px;
+	margin: 0px 10px;
 }
 
 li > label {
@@ -157,14 +157,14 @@ ul#completed-tasks label {
 
 /* Edit Task */
 ul li input[type=text] {
-	display:none;
+	display: none;
 }
 
 ul li.editMode input[type=text] {
-	display:inline-block;
-	width:224px;
+	display: inline-block;
+	width: 224px;
 }
 
 ul li.editMode label {
-	display:none;
+	display: none;
 }
